--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -28,3 +28,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'  
           projectId: '${{ secrets.FIREBASE_PROJECT_ID }}'
           target: YOUR_DEPLOYMENT_TARGET
+          publish_dir: ./build/web
